--- a/flutter_app1/pubspec.yaml
+++ b/flutter_app1/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   flame: 1.18.0           # 強制鎖定
   flame_forge2d: 0.18.0   # 強制鎖定
 
+ # 相機與相簿
+  image_picker: ^1.0.7
+  path: ^1.9.0  # 用來處理副檔名
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
