feat: Implement backup and restore functionality with custom quote import
- Added BackupService for exporting and importing diary entries and images as ZIP files.
- Introduced Quote model to store custom quotes in ObjectBox.
- Updated LocalDbService to manage Quote entities.
- Enhanced QuoteService to fetch quotes from both built-in JSON and custom database.
- Modified EditorScreen to utilize QuoteService for mood-based quotes.
- Created SettingsScreen options for theme selection and backup/restore actions.
- Integrated file_picker for selecting files during backup and restore processes.
- Updated README.md to reflect changes in project specifications and future roadmap.
- Added theme management with shared preferences for persistent user settings.

--- a/flutter_app1/pubspec.yaml
+++ b/flutter_app1/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   http: ^1.2.0
   shared_preferences: ^2.2.2
 
+  # 壓縮與解壓縮 + 檔案選取 +備份還原
+  archive: ^3.6.1
+  file_picker: ^8.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
